--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Grammy Quiz</string>
     <string name="title_activity_question">QuestionActivity</string>
+    <string name="title_activity_results">ResultsActivity</string>
 </resources>
